[gd_scene load_steps=81 format=2]

[ext_resource path="res://Overlays-Menus/Main.gd" type="Script" id=1]
[ext_resource path="res://Overlays-Menus/DifficultySelect.gd" type="Script" id=2]
[ext_resource path="res://Overlays-Menus/menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/World/earth.png" type="Texture" id=4]
[ext_resource path="res://Assets/World/red.png" type="Texture" id=5]
[ext_resource path="res://Assets/World/stars.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/menu.wav" type="AudioStream" id=7]
[ext_resource path="res://Overlays-Menus/Credits.gd" type="Script" id=8]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Overlays-Menus/PauseOverlay.tres" type="StyleBox" id=10]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 1
outline_color = Color( 0.431373, 0.603922, 0.752941, 0.337255 )
extra_spacing_bottom = -1
extra_spacing_char = 2
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.321569, 0.317647, 0.45098, 0 )
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
corner_detail = 9
shadow_color = Color( 0.027451, 0.0117647, 0.0980392, 0.6 )
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 19
outline_size = 2
outline_color = Color( 0.937255, 0.286275, 0.286275, 0.337255 )
extra_spacing_char = 3
extra_spacing_space = -8
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=66]
default_font = SubResource( 4 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 0.360784, 0.411765, 0.635294, 1 )
Button/colors/font_color_pressed = Color( 0.0784314, 0.0627451, 0.160784, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = ExtResource( 10 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = ExtResource( 10 )
Button/styles/pressed = ExtResource( 10 )
Label/colors/font_color = Color( 0.996078, 0.85098, 0.890196, 1 )
Label/colors/font_color_shadow = Color( 0.00784314, 0.0196078, 0.0901961, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 5 )
Label/styles/normal = null

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 285, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 570, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 855, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 4 )
region = Rect2( 1140, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 1425, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 1710, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 1995, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 2280, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 2565, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 2850, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 3135, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 3420, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 3705, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 3990, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 4275, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 4560, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 4845, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 5130, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 5415, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 5700, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 5985, 0, 285, 256 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 3 ), SubResource( 69 ), SubResource( 70 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 285, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 570, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 855, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 1140, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 1425, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 1710, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 1995, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 2280, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 2565, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 2850, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 3135, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 3420, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 3705, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 3990, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 4275, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 4560, 0, 285, 256 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 285, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 570, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 855, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 1140, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 1425, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 1710, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 1995, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 2280, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 2565, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 2850, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 3135, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 3420, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 3705, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 3990, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 4275, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 4560, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 4845, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 5130, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 5415, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 5700, 0, 285, 256 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 5985, 0, 285, 256 )

[sub_resource type="SpriteFrames" id=64]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=65]
size = 8
font_data = ExtResource( 9 )

[node name="MainMenu" type="CanvasLayer"]

[node name="Main" type="Control" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 184.0
theme = SubResource( 66 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Main"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.0901961, 0.0627451, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
margin_left = 16.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 48.0
text = "Red Planet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 24.0
margin_top = 56.0
margin_right = 153.0
margin_bottom = 152.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Main/VBoxContainer"]
margin_top = 4.0
margin_right = 129.0
margin_bottom = 17.0
text = "Start"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Main/VBoxContainer"]
margin_top = 41.0
margin_right = 129.0
margin_bottom = 54.0
text = "Credits"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Main/VBoxContainer"]
margin_top = 78.0
margin_right = 129.0
margin_bottom = 91.0
text = "Quit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Node2D" parent="Main"]
position = Vector2( 128, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Main/Sprites"]
position = Vector2( 168, 32 )
scale = Vector2( 0.162109, 0.162109 )
frames = SubResource( 23 )
frame = 8
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Main/Sprites"]
position = Vector2( 96, 104 )
scale = Vector2( 0.71875, 0.71875 )
frames = SubResource( 41 )
frame = 3
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Main/Sprites"]
position = Vector2( 160, 152 )
scale = Vector2( 0.224561, 0.25 )
frames = SubResource( 64 )
playing = true

[node name="Credits" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Credits"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.0901961, 0.0627451, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
margin_left = 32.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 162.0
custom_constants/separation = 18
alignment = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits/VBoxContainer"]
margin_left = 52.0
margin_right = 203.0
margin_bottom = 19.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Information" type="RichTextLabel" parent="Credits/VBoxContainer"]
margin_top = 37.0
margin_right = 256.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 65 )
tab_size = 2
text = "Lead Developer: Stephen Brod

Supporting Developers: Reichelle Robianes, Russle Robianes, & David Lee

Lead Artists: Reichelle Robianes & Russle Robianes

Story & Game Designers:
Stephen Brod, Reichelle Robianes, Russle Robianes, Peter Tang, & David Lee

Character Designers: Russle Robianes & Reichelle Robianes

Music and Sound:
* Background Music - \"The Rain Formerly Known as Purple\" by Chris Christodoulou

* Boss Music - \"...con lentitud poderosa\" by Chris Christodoulou

* Sound effects from freesound.org

Art Assets:
* Boulders - 2 Minute Tabletop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="Button" parent="Credits/VBoxContainer"]
margin_left = 57.0
margin_top = 141.0
margin_right = 199.0
margin_bottom = 154.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultySelect" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="DifficultySelect"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.0901961, 0.0627451, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DifficultySelect"]
margin_left = 54.7387
margin_top = 8.0
margin_right = 271.739
margin_bottom = 62.0
text = "Select
Difficulty"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DifficultySelect"]
margin_left = 112.0
margin_top = 56.0
margin_right = 206.0
margin_bottom = 152.0
custom_constants/separation = 18
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="DifficultySelect/VBoxContainer"]
margin_top = 10.0
margin_right = 94.0
margin_bottom = 23.0
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Button" parent="DifficultySelect/VBoxContainer"]
margin_top = 41.0
margin_right = 94.0
margin_bottom = 54.0
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="DifficultySelect/VBoxContainer"]
margin_top = 72.0
margin_right = 94.0
margin_bottom = 85.0
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[connection signal="pressed" from="Main/VBoxContainer/Start" to="Main" method="_on_Start_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Credits" to="Main" method="_on_Credits_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Quit" to="Main" method="_on_Quit_pressed"]
[connection signal="pressed" from="Credits/VBoxContainer/Main Menu" to="Credits" method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="DifficultySelect/VBoxContainer/Easy" to="DifficultySelect" method="_on_Easy_pressed"]
[connection signal="pressed" from="DifficultySelect/VBoxContainer/Medium" to="DifficultySelect" method="_on_Medium_pressed"]
[connection signal="pressed" from="DifficultySelect/VBoxContainer/Hard" to="DifficultySelect" method="_on_Hard_pressed"]
